# propertypp

./: CMakeLists.txt  README.md
cmake/modules/: FindSQLite3.cmake.bak
include/export/base/propertypp/: property.hh  property.hpp
include/export/propertypp/: property.hpp
include/export/sqlite/propertypp/: sqlite.hh  sqlite.hpp
src/: property.cpp  sqlite.cpp
tests/: sqlite_test.cpp
